src/content/docs/versions/ts-sdk/0.4.x/smelter.mdx
---
title: Smelter
slug: ts-sdk/0.4.x/ts-sdk/smelter
---

import { Aside, Badge } from '@astrojs/starlight/components';
import CollapsibleDetails from "@components/CollapsibleDetails.astro";

The primary element required to start using the Smelter TypeScript SDK is the `Smelter` class. This class is crucial
for initializing and managing the Smelter server instance.

It is available in 2 variants for different runtimes:

* Node.js
  ```tsx
  import Smelter from "@swmansion/smelter-node"
  ```
* Browser (WASM)
  ```tsx
  import Smelter from "@swmansion/smelter-web-wasm"
  ```

## new Smelter()

Creates a new Smelter instance. You have to call [init()](#init) first before this object can be used.

### Runtime: Node.js

```tsx
new Smelter(manager?: SmelterManager)
```

<CollapsibleDetails summaryTitle="Type definitions">
  ```tsx
    type ApiRequest = {
      method: 'GET' | 'POST';
      route: string;
      body?: object;
    };

    type MultipartRequest = {
      method: 'POST';
      route: string;
      body: any;
    };

    type SmelterManager = {
      setupInstance(): Promise<void>;
      sendRequest(request: ApiRequest): Promise<object>;
      sendMultipartRequest(request: MultipartRequest): Promise<object>;
      registerEventListener(cb: (event: unknown) => void): void;
    }
  ```
</CollapsibleDetails>

#### manager

Configures how the client code will connect and manage a Smelter server. Smelter SDK provides 2 implementations that you can use or extend:

* [`LocallySpawnedInstnaceManager`](/ts-sdk/0.4.x/managers/node-locally-spawned) (**default**) - Automatically download the necessary Smelter binaries and launch the server on your local machine.
* [`ExistingInstanceManager`](/ts-sdk/0.4.x/managers/node-existing-instance) - Connect to a smelter server instance that is already running.

<br />

* **Type**: [`SmelterManager`](/ts-sdk/0.4.x/smelter#runtime-nodejs)

### Runtime: Browser (WASM)

```tsx
new Smelter(options: WebWasmSmelterOptions)
```

<CollapsibleDetails summaryTitle="Type definitions">
  ```tsx
    type Framerate = {
      num: number;
      den: number;
    };
    type WebWasmSmelterOptions = {
      framerate?: Framerate | number;
      streamFallbackTimeoutMs: number;
    };
  ```
</CollapsibleDetails>

See [WebWasmSmelterOptions](/ts-sdk/0.4.x/managers/web-wasm/#webwasmsmelteroptions) to learn more.

## init()

```tsx
Smelter.init(): Promise<void>
```

Initialize the Smelter instance. This might spawn a new instance or just establish a connection.

After `init()` you can start connecting inputs/outputs or register other elements. However, no output stream will be produced until `start()` method is called.

## start()

```tsx
Smelter.start(): Promise<void>
```

Starts the processing pipeline. Any previously registered output will start producing the video/audio stream.

## registerOutput()

```tsx
Smelter.registerOutput(
  outputId: string,
  output: RegisterOutput,
): Promise<object>
```

<CollapsibleDetails summaryTitle="Type definitions @swmnasion/smelter-node">
  ```tsx
    import {
      RegisterRtpOutput,
      RegisterMp4Output,
      RegisterWhipOutput
    } from "@swmasnion/smelter"

    type RegisterOutput =
      | ({ type: 'rtp_stream' } & RegisterRtpOutput)
      | ({ type: 'mp4' } & RegisterMp4Output)
      | ({ type: 'whip' } & RegisterWhipOutput);
  ```
</CollapsibleDetails>

<CollapsibleDetails summaryTitle="Type definitions @swmansion/smelter-web-wasm">
  ```tsx
  export type RegisterOutput =
    | {
      type: 'stream';
      video: {
        resolution: Api.Resolution;
      };
      audio?: boolean;
    }
    | {
      type: 'canvas';
      video: {
        canvas: HTMLCanvasElement;
        resolution: Api.Resolution;
      };
      audio?: boolean;
    }
    | {
      type: 'whip';
      endpointUrl: string;
      bearerToken?: string;
      iceServers?: RTCConfiguration['iceServers'];
      video: {
        resolution: Api.Resolution;
        maxBitrate?: number;
      };
      audio?: boolean;
    };
  ```
</CollapsibleDetails>

Register external destination that can be used as a smelter output. Visit output documentation to learn more.

`@swmansion/smelter-node`:

* [RTP](/ts-sdk/0.4.x/outputs/rtp)
* [MP4](/ts-sdk/0.4.x/outputs/mp4)
* [WHIP](/ts-sdk/0.4.x/outputs/whip)

`@swmansion/smelter-web-wasm`

* [Canvas (Web API)](/ts-sdk/0.4.x/outputs/wasm-canvas)
* [MediaStream (Web API)](/ts-sdk/0.4.x/outputs/wasm-stream)
* [WHIP (Web API)](/ts-sdk/0.4.x/outputs/wasm-whip)

## unregisterOutput()

```tsx
Smelter.unregisterOutput(outputId: string): Promise<void>
```

Unregister previously registered output.

## registerInput()

```tsx
  Smelter.registerInput(
    inputId: string,
    input: RegisterInput
  ): Promise<InputHandle>
```

<CollapsibleDetails summaryTitle="Type definitions @swmnasion/smelter-node">
  ```tsx
    import {
      RegisterRtpInput,
      RegisterMp4Input,
      RegisterWhipInput
    } from "@swmasnion/smelter"

    type RegisterInput =
      | ({ type: "rtp_stream" } & RegisterRtpInput)
      | ({ type: "mp4" } & RegisterMp4Input)
      | ({ type: "whip" } & RegisterWhipInput);
  ```
</CollapsibleDetails>

<CollapsibleDetails summaryTitle="Type definitions @swmansion/smelter-web-wasm">
  ```tsx
    type RegisterInput =
      | { type: 'mp4'; url: string }
      | { type: 'camera' }
      | { type: 'screen_capture' }
      | { type: 'stream'; stream: MediaStream };
  ```
</CollapsibleDetails>

Register external source that can be used as a smelter input. Visit input documentation to learn more.

`@swmansion/smelter-node`

* [RTP](/ts-sdk/0.4.x/inputs/rtp)
* [MP4](/ts-sdk/0.4.x/inputs/mp4)
* [WHIP](/ts-sdk/0.4.x/inputs/whip)

`@swmansion/smelter-web-wasm`

* [Camera (Web API)](/ts-sdk/0.4.x/inputs/wasm-camera)
* [Screen capture (Web API)](/ts-sdk/0.4.x/inputs/wasm-screen)
* [MediaStream (Web API)](/ts-sdk/0.4.x/inputs/wasm-stream)
* [MP4](/ts-sdk/0.4.x/inputs/mp4)

The returned `InputHandle` lets you control the input after registration. For [MP4](/ts-sdk/0.4.x/inputs/mp4) inputs it is an `Mp4InputHandle` that additionally supports seeking; for [WHIP](/ts-sdk/0.4.x/inputs/whip) inputs it is a `WhipInputHandle` that exposes the negotiated endpoint URL and bearer token.

<CollapsibleDetails summaryTitle="Type definitions @swmansion/smelter-node">
  ```tsx
    class InputHandle {
      /** Length of the video track if available. */
      get videoDurationMs(): number | undefined;
      /** Length of the audio track if available. */
      get audioDurationMs(): number | undefined;
      /**
       * Stop delivering frames/samples until resumed.
       * Only supported for MP4 inputs.
       */
      pause(): Promise<void>;
      /** Resume a previously paused input. Only supported for MP4 inputs. */
      resume(): Promise<void>;
    }

    class Mp4InputHandle extends InputHandle {
      /** Seek to a specific position in the file, in milliseconds. */
      seek(seekMs: number): Promise<void>;
    }

    class WhipInputHandle extends InputHandle {
      /** WHIP endpoint URL the client should connect to. */
      get endpointRoute(): string | undefined;
      /** Bearer token required by the WHIP endpoint. */
      get bearerToken(): string | undefined;
    }
  ```
</CollapsibleDetails>

<Aside>`pause()` / `resume()` are only supported for [MP4](/ts-sdk/0.4.x/inputs/mp4) inputs. Calling them on other input types will throw.</Aside>

## getInputById()

<CollapsibleDetails summaryTitle="Runtime availability">
  * <Badge text="Node.js" variant="tip" />
</CollapsibleDetails>

```tsx
Smelter.getInputById(inputId: string): InputHandle | undefined
```

Returns the [`InputHandle`](#registerinput) for a previously registered input, or `undefined` if no input with the given ID exists.

## unregisterInput()

```tsx
Smelter.unregisterInput(inputId: string): Promise<void>
```

Unregister previously registered input.

## registerImage()

```tsx
  import { Renderers } from "@swmansion/smelter"

  Smelter.registerImage(
    imageId: string,
    image: Renderers.RegisterImage,
  ): Promise<void>
```

Register an image asset. See [RegisterImage](/ts-sdk/0.4.x/resources/image) to learn more.

## unregisterImage()

```tsx
Smelter.unregisterImage(imageId: string): Promise<void>
```

Unregister a previously registered image asset.

## registerShader()

```tsx
  import { Renderers } from "@swmnasion/smelter"

  Smelter.registerShader(
    shaderId: string,
    shader: Renderers.RegisterShader,
  ): Promise<void>
```

Register a shader. See [RegisterShader](/ts-sdk/0.4.x/resources/shader) to learn more.

## unregisterShader()

```tsx
Smelter.unregisterShader(shaderId: string): Promise<void>
```

Unregister a previously registered shader.

## registerWebRenderer()

```tsx
  import { Renderers } from "@swmansion/smelter"

  Smelter.registerWebRenderer(
    instanceId: string,
    instance: Renderers.RegisterWebRenderer,
  ): Promise<object>
```

Register a web renderer instance. See [RegisterWebRenderer](/ts-sdk/0.4.x/resources/web-renderer) to learn more.

## unregisterWebRenderer()

```tsx
Smelter.unregisterWebRenderer(instanceId: string): Promise<void>
```

Unregister a previously registered web renderer.

## registerFont()

```tsx
Smelter.registerFont(source: FontSource): Promise<void>
```

<CollapsibleDetails summaryTitle="Type definitions @swmnasion/smelter-node">
  ```tsx
    type FontSource =
      | 'string' // URL
      | ArrayBuffer
  ```
</CollapsibleDetails>

<CollapsibleDetails summaryTitle="Type definitions @swmansion/smelter-web-wasm">
  ```tsx
  type Source = 'string' // URL
  ```
</CollapsibleDetails>

Register new font.

## terminate()

```tsx
Smelter.terminate(): Promise<void>
```

Terminate the compositor instance. Depending on implementation it might just drop connection to
the server, shutdown server itself, or in case of WASM build shutdown Web Worker responsible for running it.
